using CommonEntity;

namespace Adapter.Presenter
{
    public interface IAddView
    {
        public void OnAdd(CardEntity cardEntity);
    }
}