using CommonEntity;

namespace Adapter.Presenter
{
    public interface IRemoveView
    {
        public void OnRemove(CardEntity cardEntity);
    }
}