namespace CommonEntity
{
    public class CardEntity
    {
        public string CardKey { get;  }

        public CardEntity(string cardKey)
        {
            CardKey = cardKey;
        }
    }
}