using System;

namespace Detail.DB
{
    [Serializable]
    public class CardData
    {
        public string cardKey;
    }
}