@startuml


package CommonEntity
{
class Card
{
}
}
package Domain
{
package Entity
{

class Deck
{
}

class CardPool
{
}
}



package UseCase
{
class RemoveUseCase
{
}

class AddUseCase
{
}

class CardPoolUseCase
{
}
interface ICardPoolGateway
{
}
}
}

package Adapter
{

package Presenter
{
class RemovePresenter
{
}
interface IRemoveView
{
}

class AddPresenter
{
}

interface IAddView

class CardPoolPresenter
interface ICardPoolView
}

package Controller
{
class AddController
class RemoveController
}

package Gateway
{
class CardPoolGateway
interface ICardDatabase
}
}

package Detail
{


package View
{
class DeckView
{
}

class DeckCardView
{
}

class DeckCardViewFactory
{
}

class CardPoolView
class CardPoolCardView
class CardPoolCardFactory

}

package DB
{
class CardPoolDatabase
class CardData
}

}

AddUseCase -u-> Deck

AddPresenter -u--> AddUseCase
AddPresenter --> IAddView

DeckView -u-|> IAddView

RemoveUseCase -u--> Deck

RemovePresenter -u-> RemoveUseCase
RemovePresenter --> IRemoveView

DeckView -u-|> IRemoveView

DeckView -d-> DeckCardViewFactory
DeckCardViewFactory -d-> DeckCardView
DeckCardView -u--> RemoveController

CardPoolUseCase -u-> CardPool

CardPoolView -d-> CardPoolCardFactory
CardPoolPresenter -u-> CardPoolUseCase
CardPoolPresenter --> ICardPoolView
CardPoolView -u-|> ICardPoolView
CardPoolCardFactory -d-> CardPoolCardView
CardPoolCardView -u-> AddController

AddController -u-> AddUseCase
RemoveController -u-> RemoveUseCase

CardPoolUseCase --> ICardPoolGateway
CardPoolGateway -u-|> ICardPoolGateway
CardPoolGateway --> ICardDatabase

CardPoolDatabase -u-|> ICardDatabase
CardPoolDatabase --> CardData

@enduml